[workspace]
resolver = "2"
members = [
  "cargo-creusot",
  "creusot",
  "creusot-contracts",
  "creusot-contracts-proc",
  "creusot-dev-config",
  "creusot-install",
  "creusot-metadata",
  "creusot-rustc",
  "pearlite-syn",
  "prelude-generator",
  "tests",
  "why3",
  "why3tests",
]

[workspace.package]
version = "0.6.0-dev"

[profile.dev]
split-debuginfo = "off"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
