name: "creusot-deps"
synopsis: "Opam dependencies for Creusot"
opam-version: "2.0"
maintainer: "Armaël Guéneau <armael.gueneau@inria.fr>"
authors: "the creusot authors"
depends: [
  "ocaml" {= "5.3.0"}
  "why3" {= "git-56a15760"}
  "why3-ide" {= "git-56a15760" & !?in-creusot-ci}
  "why3find" {= "git-3a98fc32"} # if these versions change don't forget to update creusot-setup/src/tools_versions_urls.rs
# optional dependencies of why3
  "ocamlgraph"
  "camlzip"
  "zarith"
]
# When updating the hash and git-XXX below, don't forget to update them in the
# depends: field above!
pin-depends: [
  [ "why3.git-56a15760" "git+https://gitlab.inria.fr/why3/why3.git#56a15760" ]
  [ "why3-ide.git-56a15760" "git+https://gitlab.inria.fr/why3/why3.git#56a15760" ]
  [ "why3find.git-3a98fc32" "git+https://github.com/creusot-rs/why3find.git#3a98fc320b9cbf2e71860da1c8dc188a966eee96" ]
]
