name: "creusot-deps"
synopsis: "Opam dependencies for Creusot"
opam-version: "2.0"
maintainer: "Armaël Guéneau <armael.gueneau@inria.fr>"
authors: "the creusot authors"
depends: [
  "ocaml" {= "5.3.0"}
  "why3" {= "git-b4b42d79"}
  "why3-ide" {= "git-b4b42d79" & !?in-creusot-ci}
  "why3find" {= "git-eab37557"} # if these versions change don't forget to update creusot-setup/src/tools_versions_urls.rs
# optional dependencies of why3
  "ocamlgraph"
  "camlzip"
  "zarith"
]
# When updating the hash and git-XXX below, don't forget to update them in the
# depends: field above!
pin-depends: [
  [ "why3.git-b4b42d79" "git+https://gitlab.inria.fr/why3/why3.git#b4b42d7997d676884b962d966d6d6955739b9365" ]
  [ "why3-ide.git-b4b42d79" "git+https://gitlab.inria.fr/why3/why3.git#b4b42d7997d676884b962d966d6d6955739b9365" ]
  [ "why3find.git-eab37557" "git+https://github.com/creusot-rs/why3find.git#eab37557d3e24e1913a3c4f44bc5528ef497c6c9" ]
]
