[package]
name = "cargo-creusot"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
toml = { version = "0.5.8" }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
creusot-args = {path = "../creusot-args"}
creusot-setup = {path = "../creusot-setup"}
anyhow = "1.0"
cargo_metadata = "0.18.1"
include_dir = "0.7.3"
tempdir = "0.3.7"