[package]
name = "cargo-creusot"
version = "0.3.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive", "env"] }
serde_json = { version = "1.0" }
toml = { version = "0.5.8" }
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
why3 = { path = "../why3", features = ["serialize"] }
creusot-args = {path = "../creusot-args"}
creusot-setup = {path = "../creusot-setup"}
anyhow = "1.0"
cargo_metadata = "0.18.1"
include_dir = "0.7.3"
tempdir = "0.3.7"
glob = "0.3.1"

