[package]
name = "cargo-creusot"
version.workspace = true
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde_json = "1.0"
toml = "0.8"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
creusot-args = { path = "../creusot-args" }
creusot-setup = { path = "../creusot-setup" }
anyhow = "1.0"
cargo_metadata = "0.19"
include_dir = "0.7"
tempdir = "0.3"
glob = "0.3"
toml_edit = "0.22.24"
