name: "creusot-deps-nightly"
synopsis: "Opam dependencies for Creusot"
opam-version: "2.0"
maintainer: "Armaël Guéneau <armael.gueneau@inria.fr>"
authors: "the creusot authors"
depends: [
  "why3" {= "git"}
# optional dependencies of why3
  "ocamlgraph"
  "camlzip"
  "zarith"
# the alt-ergo solver
  "alt-ergo" {= "2.4.3"}
]
pin-depends: [
  [ "why3.git" "git+https://gitlab.inria.fr/why3/why3.git" ]
]
