[package]
name = "creusot-args"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive", "env"] }
serde = { version = "1.0.195", features = ["derive"] }
