[package]
name = "creusot-contracts-dummy"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/creusot-rs/creusot"
license = "LGPL-2.1-or-later"
description = "Dummy proc macros for creusot-contracts"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
