[package]
name = "creusot-contracts-dummy"
version = "0.4.0"
edition = "2024"
homepage = "https://github.com/creusot-rs/creusot"
license = "LGPL-2.1-or-later"
description = "Dummy proc macros for creusot-contracts"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2", features = ["full", "visit-mut"] }
