[package]
name = "creusot-contracts-proc"
version = "0.1.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2018"
repository = "https://github.com/creusot-rs/creusot"
license = "LGPL-2.1-or-later"
description = "Proc macro crate for creusot-contracts"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
uuid = { version = "1.3", features = ["v4"] }
pearlite-syn = { version = "0.1", path = "../pearlite-syn", features = ["full"] }
syn = { version = "2.0.15"}
proc-macro2 = "1.0.29"
