[package]
name = "creusot-contracts"
version = "0.2.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2018"
homepage = "https://github.com/creusot-rs/creusot"
license = "LGPL-2.1-or-later"
description = "Provides contracts and logic helpers for Creusot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
creusot-contracts-proc = { path = "../creusot-contracts-proc", version = "0.2.0" }
creusot-contracts-dummy = { path = "../creusot-contracts-dummy", version = "0.2.0" }
num-rational = "0.3.2"

[features]
default = []
typechecker = []
contracts = []

[package.metadata.release]
pre-release-replacements = [ ]
