[package]
name = "creusot-contracts"
version = "0.4.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2018"
homepage = "https://github.com/creusot-rs/creusot"
license = "LGPL-2.1-or-later"
description = "Provides contracts and logic helpers for Creusot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(creusot)'.dependencies]
num-rational = "0.4"
creusot-contracts-proc = { path = "../creusot-contracts-proc", version = "0.4.0" }

[target.'cfg(not(creusot))'.dependencies]
creusot-contracts-dummy = { path = "../creusot-contracts-dummy", version = "0.4.0" }

[features]
# Enabled by creusot.
# Must be disabled to build with stable Rust.
# May be enabled to build with nightly Rust.
nightly = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }
