[package]
name = "creusot-contracts"
version.workspace = true
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2024"
homepage = "https://github.com/creusot-rs/creusot"
license = "LGPL-2.1-or-later"
description = "Provides contracts and logic helpers for Creusot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(creusot)'.dependencies]
num-rational = "0.4"

[dependencies]
creusot-contracts-proc = { path = "../creusot-contracts-proc", version = "0.8.0" }

[features]
# Enabled by creusot.
# Must be disabled to build with stable Rust.
# May be enabled to build with nightly Rust.
nightly = []
creusot = ["creusot-contracts-proc/creusot"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }
