[package]
name = "creusot-install"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
creusot-setup = {path = "../creusot-setup"}
anyhow = "1.0"
directories = "6.0"
sha2 = "0.10"
hex = "0.4"
zip = { version = "7.4.0", default-features = false, features = ["deflate"] }