[package]
name = "creusot-rustc"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
creusot = { path = "../creusot", version = "0.2" }
toml = "0.5.8"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
creusot-args = {path = "../creusot-args"}

