[package]
name = "creusot-rustc"
version = "0.5.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
creusot = { path = "../creusot", version = "0.5.0" }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
creusot-args = { path = "../creusot-args" }

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)].
# See https://github.com/rust-analyzer/rust-analyzer/pull/7891
rustc_private = true
