[package]
name = "creusot-setup"
version = "0.1.1"
edition = "2021"

[dependencies]
creusot-args = {path = "../creusot-args"}
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5.8", features = ["preserve_order"] }
directories = "5.0"
which = "6.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.6"
hex = "0.4"
sha2 = "0.10"
