[package]
name = "creusot-std"
version.workspace = true
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2024"
homepage = "https://github.com/creusot-rs/creusot"
license = "LGPL-2.1-or-later"
description = "Standard library of Creusot: provides specification macros, contracts for Rust standard library and logic helpers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(creusot)'.dependencies]
num-rational = { version = "0.4", features = ["num-bigint"], default-features = false }

[dependencies]
creusot-std-proc = { path = "../creusot-std-proc", version = "0.8.0" }

[features]
# Enabled by creusot.
# Must be disabled to build with stable Rust.
# May be enabled to build with nightly Rust.
nightly = []
creusot = ["creusot-std-proc/creusot"]
default = ["std"]
std = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }
