[package]
name = "creusot-std"
version.workspace = true
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2024"
license = "LGPL-2.1-or-later"
description = "Standard library of Creusot: provides specification macros, contracts for Rust standard library and logic helpers"
repository.workspace = true
homepage.workspace = true
readme.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(creusot)'.dependencies]
num-rational = { version = "0.4", optional = true }

[dependencies]
creusot-std-proc = { path = "../creusot-std-proc", version = "0.12.0-dev" }

[features]
# Enabled by creusot.
# Must be disabled to build with stable Rust.
# May be enabled to build with nightly Rust.
nightly = []
creusot = ["creusot-deps", "creusot-std-proc/creusot"]
creusot-deps = ["creusot-std-proc/creusot-deps"]
sc-drf = []
default = ["std", "creusot-deps"]
std = ["dep:num-rational"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(creusot)'] }
