[package]
name = "creusot-why3-spans"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Extracts spans produced by creusot from why3"
publish = false
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
annotate-snippets = "0.12.13"
quick-xml = "0.36"
ocaml-interop = "0.12"

[build-dependencies]
cc = "1"
