[package]
name = "creusot"
version = "0.3.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2021"
license = "LGPL-2.1-or-later"
publish = false

[dependencies]
itertools = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
# Necessary as this introduces a version of `GraphMap` with no `Ord` bound.
# If https://github.com/petgraph/petgraph/issues/646 is solved, go back to upstream.
petgraph = { version = "0.6", git = "https://github.com/xldenis/petgraph", rev = "04cecb7" }
indexmap = { version = "1.7.0", features = ["serde"] }
toml = "0.5.8"
why3 = { path = "../why3", features = ["serialize"] }
clap = { version = "4.2", features = ["derive", "env"] }
creusot-metadata = { path = "../creusot-metadata" }
include_dir = "0.7.3"
tempdir = "0.3.7"
serde_json = { version = "1.0" }
lazy_static = "1.4.0"
pathdiff = "0.2"

[dev-dependencies]
regex = "1.10.5"
glob = "*"
assert_cmd = "1.0"
similar = "2.2"
termcolor = "1.1"
arraydeque = "0.4"
creusot-contracts = { path = "../creusot-contracts", features = ["typechecker"] }
escargot = { version = "0.5" }
creusot-setup = { path = "../creusot-setup" }

[[test]]
name = "ui"
harness = false

[[test]]
name = "creusot-contracts"
harness = false

[package.metadata.rust-analyzer]
rustc_private = true

[package.metadata.release]
pre-release-replacements = [
  {file="../CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="../CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="../CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
]
