[package]
name = "creusot"
version = "0.3.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2021"
license = "LGPL-2.1-or-later"
publish = false

[dependencies]
itertools = "0.14"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
# Necessary as this introduces a version of `GraphMap` with no `Ord` bound.
# If https://github.com/petgraph/petgraph/issues/646 is solved, go back to upstream.
petgraph = { version = "0.6", git = "https://github.com/xldenis/petgraph", rev = "04cecb7" }
indexmap = { version = "2.7", features = ["serde"] }
toml = "0.8"
why3 = { path = "../why3", features = ["serialize"] }
creusot-metadata = { path = "../creusot-metadata" }
include_dir = "0.7"
tempdir = "0.3"
serde_json = "1.0"
lazy_static = "1.5"
pathdiff = "0.2"
once_map = "0.4"

[dev-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.11"
glob = "*"
assert_cmd = "2.0"
similar = "2.7"
termcolor = "1.4"
arraydeque = "0.5"
creusot-contracts = { path = "../creusot-contracts", features = ["typechecker"] }
escargot = "0.5"
creusot-setup = { path = "../creusot-setup" }
libc = "0.2"

[[test]]
name = "ui"
harness = false

[package.metadata.rust-analyzer]
rustc_private = true

[package.metadata.release]
pre-release-replacements = [
  {file="../CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="../CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="../CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
]
