[package]
name = "pearlite-syn"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/creusot-rs/creusot"
description = "A syn parser for the Pearlite specification language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

syn = { version = "2.0.15", features = ["full", "extra-traits", "visit-mut"] }
proc-macro2 = "1.0.76"
quote = "1.0.35"

[features]

default = ["full"]
full = ["parsing", "printing"]
printing = []
parsing = []

[dev-dependencies]
insta = "1.0.29"
ref-cast = "1.0"
