[package]
name = "pearlite-syn"
version = "0.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/creusot-rs/creusot"
description = "A syn parser for the Pearlite specification language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
proc-macro2 = "1.0"
quote = "1.0"

[features]

default = ["full"]
full = ["parsing", "printing"]
printing = []
parsing = []

[dev-dependencies]
insta = "1.42"
ref-cast = "1.0"

