[package]
name = "pearlite-syn"
version = "0.5.0-dev"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/creusot-rs/creusot"
description = "A syn parser for the Pearlite specification language in Creusot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

syn = { version = "2.0", features = ["full", "extra-traits", "visit-mut"] }
# "span-locations" really needed by creusot-contracts-proc but it affects the tests cases here too.
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"

[features]

default = ["full"]
full = ["parsing", "printing"]
printing = []
parsing = []

[dev-dependencies]
insta = "1.42"
ref-cast = "1.0"
