[package]
name = "pearlite"
version = "0.1.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "*", git = "https://github.com/xldenis/syn", branch = "spec-lang-2", features = ["full", "extra-traits", "visit"] }
indexmap = "*"
ena = "0.14.0"
