[package]
name = "creusot-tests"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2024"
license = "LGPL-2.1-or-later"
publish = false

[dev-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.11"
glob = "*"
assert_cmd = "2.0"
similar = "2.7"
termcolor = "1.4"
libc = "0.2"
creusot-contracts = { path = "../creusot-contracts", features = ["nightly"] }
creusot-setup = { path = "../creusot-setup" }

[[test]]
name = "ui"
harness = false
