[package]
name = "why3"
version = "0.1.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

itertools = "0.10"
pretty = "0.11"
indexmap = "1.2.0"
serde = { version = "1.0", optional = true, features = ["derive"] }
num = "0.4"
serde_json = "1.0.107"

[dev-dependencies]
proptest= "1.4.0"
tempfile="3.10.0"


[features]
serialize = ["serde"]
