[package]
name = "why3"
version = "0.5.0"
authors = ["Xavier Denis <xldenis@gmail.com>"]
edition = "2024"
repository = "https://github.com/creusot-rs/creusot"
license = "LGPL-2.1-or-later"
description = "Why3 AST and pretty printers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14"
pretty = "0.12"
indexmap = "2.7"
serde = { version = "1.0", optional = true, features = ["derive"] }
num = "0.4"
serde_json = "1.0"
string-interner = "0.18.0"

[dev-dependencies]
proptest= "1.6"
tempfile="3.16"

[features]
serialize = ["serde"]
