[package]
name = "why3tests"
version = "0.1.0"
edition = "2018"

# This package is a placeholder used to run the why3 tests without requiring
[dev-dependencies]
glob = "*"
assert_cmd = "1.0"
termcolor = "1.1"
git2 = "0.14.4"
clap = { version = "4.2", features = ["env", "derive"]}
roxmltree = "0.18.0"
creusot-dev-config = { path = "../creusot-dev-config" }

[[test]]
test = false
name = "why3"
harness = false

[[test]]
test = false
name = "session_stats"
harness = false
