[package]
name = "why3tests"
version = "0.4.0"
edition = "2024"
publish = false

# This package is a placeholder used to run the why3 tests without requiring
[dev-dependencies]
glob = "*"
assert_cmd = "2.0"
termcolor = "1.4"
git2 = "0.20"
clap = { version = "4.5", features = ["env", "derive"]}
roxmltree = "0.20.0"
creusot-setup = { path = "../creusot-setup" }
regex = "*"

[[test]]
test = false
name = "why3"
harness = false

[[test]]
test = false
name = "session_stats"
harness = false
